Introduce ComputeStartFromEndForExtendForward() for ExtendSelectionAsDirectional()

This patch introduces |ComputeStartFromEndForExtendForward()| for
|ExtendSelectionAsDirectional()| as replacement of
|ComputeStartRespectingGranularity()| to use correct start position when
extending selection with word or paragraph granularity.

Note: When passing end of word/pargraph position to
|ComputeStartRespectingGranularity()|, it returns next word/paragraph position
instead of start of word/paragraph of the word.

Behavior of before this patch:
  abc |def^ ghi* => abc def ^ghi|
After this patch:
  abc |def^ ghi* => abc ^def| ghi
where "^" is base, "|" is extent, "*" is shift-click or drag position.

Bug: 748361
Change-Id: I3dc6ea158077121cda24bb0787895d4d5561b2a3
Reviewed-on: https://chromium-review.googlesource.com/590838
Reviewed-by: Xiaocheng Hu <xiaochengh@chromium.org>
Commit-Queue: Yoshifumi Inoue <yosin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#490856}
Former-commit-id: da0e8f7a07e227aa011a3259fca40492575c4177